Arreglo dibujo brazo e inicio subsubsección viento

--- a/main.tex
+++ b/main.tex
@@ -20,8 +20,13 @@ frametitlerule=true,%
 frametitlebackgroundcolor=gray!20,
 innertopmargin=\topskip,
 }
-\mdtheorem[style=theoremstyle]{definition}{Definición}
+%\mdtheorem[style=theoremstyle]{definition}{Definición}
+\newtheorem{definicion}{Definición}[section]
+\newtheorem{proposicion}{Proposición}[section]
 
+\newtheorem{propiedad}{Propiedad}[section]
+
+\newtheorem{ejemplo}{Ejemplo}[section]
 
 \begin{document}
 \include{basicas/portada}
