--- a/secciones/seccion1.tex
+++ b/secciones/seccion1.tex
@@ -28,14 +28,17 @@ La longitud $L$ vista en la Figura \ref{fig:pala_simp} es con la que se va a tra
 
 Como se puede observar en la Figura \ref{fig:pala_dividida} cada segmento tiene una altura variable, esto se debe a la forma real de las palas, cuanto más cerca de la turbina mayor es el tamaño del segmento.\\\\
 
+
 {\color{blue} La altura de estos segmentos depende del valor de una variable, conocida como longitud de cuerda, $c$, que varía dependiendo del segmento, cuanto más alejados del rotor menor será su valor.} \\\\
 
-Se determina el área de los segmentos con la siguiente fórmula:
 
+\begin{definicion}
+Se determina el área de los segmentos:
 $$ área_{i} = \dfrac{L \cdot c_i}{N} $$
 donde:
 $$ i \in segmento $$
 $$ segmento = \{1, ..., N\}$$
+\end{definicion}
 
 A continuación, se supone que los segmentos están separados los unos de los otros y ensartados por una línea imaginaria que ayudará al estudio de la torsión mediante giros de los segmentos alrededor suya.
 
@@ -44,18 +47,19 @@ A continuación, se supone que los segmentos están separados los unos de los ot
 
 El ángulo $ \theta_1 $ se define como el giro inicial que sufrirán todos y cada uno de los segmentos que son paralelos al plano horizontal, desde el cual se presenta el viento que incidirá en nuestra pala.\\
 
-
-El ángulo de torsión de cada segmento se define con la siguiente fórmula:
-
+\begin{definicion}
+El ángulo de torsión de cada segmento se define con:
 $$\theta_i =
 \left\{\begin{matrix}
     \theta_1 \text{\hspace{77} si \hspace{1}} i=1 \\
     \sum_{k=1}^{i} \theta_k + \Delta_\theta \text{\hspace{20} si \hspace{2}} i>1 \\
     \end{matrix}$$
+    donde:
  $$ i \in segmento$$
+\end{definicion}
+
 
 Como se menciona en el primer párrafo de esta sección, el viento con el que se trabajará se presenta en el plano horizontal sobre el que también está posada la pala que estamos estudiando.\\
-
 
 Al haber inclinado todos los segmentos un ángulo $ \theta_1 $ se genera la situación en la que el viento incide en el centro del segmento con el mismo ángulo con el que se inclina la pala. \\
 
@@ -63,19 +67,20 @@ La fuerza del viento que incide en la pala se puede descomponer en 2, la tangenc
 
  INSERTAR DIBUJO DE LAS FUERZAS \\
  
+ \begin{definicion}
  La fuerza normal genera un ángulo de:
  $$ ángulo \text{ } normal_i = \dfrac{\pi}{2} - \theta_i $$
+ donde:
  $$ i \in segmento$$
- Su fuerza se define como:
+ \end{definicion}
+
  \begin{definicion}
+  Su fuerza se define como:
   $$ f \text{ } normal_i = F \cdot \sin{\theta_i}$$
+   La fuerza $F$ será explicada más adelante.
   \label{def:fuerza_normal}
  \end{definicion}
 
- 
- 
-
- La fuerza $F$ será definida más adelante.
  
  La componente paralela a la pala, que se ha definido como tangencial se obviará debido a que no genera momento de giro o torque. 
  
@@ -98,6 +103,18 @@ El momento de giro o torque se define como:
     \textit{Fuente: Elaboración propia}
 \end{figure}
 
+Ahora que visualmente se conoce qué se define por $brazo$, podemos pasar a definirlo.
+
+\begin{definicion}
+El  brazo o radio de la pala viene definido por la siguiente fórmula:
+$$ brazo_i = \dfrac{L}{2} + \sum_{k=1}^{i} L \cdot (k-1)$$
+    donde:
+ $$ i \in segmento$$
+ \centering
+ L := longitud de los segmentos. 
+
+\end{definicion}
+
  
  En la Definición \ref{def:torque} se encuentra un producto vectorial entre la $fuerza  \text{ }perpendicular \text{ } o \text{ } normal$ y el $brazo$. Pero estas dos variables son perpendiculares la una a la otra. Esto se puede ver ya que $brazo$ es completamente paralelo a la $fuerza \text{ } tangencial$. Esto demuestra la perpendicularidad y hace que la Definición \ref{def:torque} que contenía un producto vectorial de dos parámetros perpendiculares sea definitivamente un producto algebraico, dando lugar a:
  
@@ -105,15 +122,44 @@ El momento de giro o torque se define como:
   El torque termina siendo un producto vectorial.
  $$ torque_i = f \text{ } normal_i \cdot brazo_i$$
  $$ i \in segmento$$
- \label{def:torquevectorial}
+ \label{def:torque_vectorial}
  \end{definicion}
  
- 
- \subsubsection{Fuerza del viento}
+\begin{definicion}
+ La suma de los torques se conoce como torque global.
+ $$ torque_{global}__1 \text{ } = \sum_{i=1}^{N} torque_i $$
+ donde:
+ $$ i \in segmento$$
+ \label{def:torque_global}
+\end{definicion}
+
+%Se ve muy pequeña la definición de toque_global
+ Ahora se introduce otro concepto, se trata de la fuerza del viento. Gracias a este parámetro, podremos conocer la fuerza normal que se está produciendo en cada uno de los segmentos mediante la definición \ref{def:fuerza_normal}, ya que la fuerza $F$ es su equivalente.
  
  \begin{definicion}
  La fuerza del viento con el que se trabajará viene definida por:
  
- $$ F \text{ } viento = \dfrac{1}{2} \text{ } \rho \cdot a \cdot u^2$$
+ $$ F \text{ } viento = \dfrac{1}{2} \text{ } \rho \cdot a_i \cdot u^2$$
+ donde:
+ 
+  \centering $i \in segmento$,  $\rho = 1.225 \text{ } \dfrac{Kg}{m^3}$, $a$ := área del segmento i y \\ $u$ := Velocidad del viento.
  \label{def:fuerza_viento}
  \end{definicion}
+ 
+ 
+ \subsubsection{Cálculo de la potencia del sistema}
+ 
+ Una vez se tiene todo lo necesario para el cálculo del torque, se puede pasar al siguiente escalón que sería la potencia. Esta es una unidad de medida que permitirá conocer si el estudio que se está realizando está siendo fructífero, cuanta mayor cantidad de energía se genere mejor. Para conocer si la potencia que está generando el experimento se deberá realizar otro caso de estudio cambiando un pequeño parámetro que se explicará en uno de los siguientes puntos.
+ 
+  \begin{definicion}
+ La potencia del sistema con un giro inicial se define como:
+ $$ potencia_1 = torque_{global}__1 \cdot W_1 $$ 
+ 
+ %Esta fórmula se ve fatal
+ 
+ donde:
+  \centering $i \in segmento$, $W_1$ := Velocidad de giro o angular de las palas.
+ \label{def:fuerza_viento}
+ \end{definicion}
+ 
+ 
