arreglos angulo inicial y rediseño apartados

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,31 @@
-@article{blanco2021comparativa,
-  title={Comparativa de t{\'e}cnicas de an{\'a}lisis de sentimiento en contextos competitivos},
-  author={Blanco Morago, Raquel},
-  year={2021}
+@article{de1999implementation,
+  title={Implementation of bending-torsion coupling in the design of a wind-turbine rotor-blade},
+  author={De Goeij, WC and Van Tooren, MJL and Beukers, Adriaan},
+  journal={Applied Energy},
+  volume={63},
+  number={3},
+  pages={191--207},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{younsi2001dynamic,
+  title={Dynamic study of a wind turbine blade with horizontal axis},
+  author={Younsi, Rachid and El-Batanony, Ismail and Tritsch, Jeur-Bernard and Naji, Hassan and Landjerit, Bernard},
+  journal={European Journal of Mechanics-A/Solids},
+  volume={20},
+  number={2},
+  pages={241--252},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{armenta2021predictive,
+  title={Predictive Model of Wind Turbine Rotor-Blade Deflection},
+  author={Armenta-Déu, Carlos and Renoud-Grappin, Antoine},
+  journal={Journal of Offshore Structure and Technology},
+  volume={8},
+  pages={49--63},
+  year={2021},
+  publisher={STM Journals}
 }
